<?xml version="1.0" encoding="utf-8"?><!--
 ! Excerpted from "Hello, Android",
 ! published by The Pragmatic Bookshelf.
 ! Copyrights apply to this code. It may not be used to create training material, 
 ! courses, books, articles, and the like. Contact us if you are in doubt.
 ! We make no guarantees that this code is fit for any purpose. 
 ! Visit http://www.pragmaticprogrammer.com/titles/eband4 for more book information.
-->
<resources>
    <string name="app_name">NUMAD16S-RanChen</string>
    <string name="long_app_name">Ultimate Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="restart_label">Restart</string>
    <string name="main_menu_label">Main Menu</string>
    <string name="declare_winner">%1$s is the winner</string>
    <string name="continue_label">Continue</string>
    <string name="new_game_label">New Game</string>
    <string name="about_title">About Ultimate Tic Tac Toe</string>
    <string name="about_label">About</string>
    <string name="ok_label">OK</string>
    <string name="creator_name">RanChen</string>
    <string name="about_text">\
This game is played just like
regular Tic Tac Toe with one difference: to win a tile
you have to win a smaller game of Tic Tac Toe inside that tile.\n\
\n\
A tie happens when there are no further moves.
In the case of a tie in a small board, that will count as a win for
both sides in the larger game.
</string>
    <string name="aboutMe_text">\
    RanChen\n\
    chen.ra@husky.neu.edu\n\
    2nd year MS\n\
    Master of Science in Telecommunication System Management
</string>
    <string name="title_activity_about_me">aboutMeActivity</string>
    <string name="reportError_label">Generate Error</string>
    <string name="tictac_label">TicTacToe</string>
    <string name="aboutme_label">About</string>
    <string name="quit_label">Quit</string>
    <string name="title_activity_me">MeActivity</string>
    <string name="name_label">RanChen</string>
    <string name="email_label">chen.ra@husky.neu.edu</string>
    <string name="year_label">2nd Year MS</string>
    <string name="degree_label">Master of Science in Telecom</string>
    <string name="dictionary_label">Dictionary</string>
    <string name="title_activity_dictionary">Dictionary</string>
    <string name="title_activity_new_game">NewGame</string>
    <string name="ack_text">Acknowledgement</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pause_label">pause</string>
    <string name="resume_label">Resume</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_pause_game">PauseGame</string>
    <string name="title_activity_phase_two">PhaseTwo</string>
    <string name="title_activity_communication">Communication</string>
    <string name="single_player_text">SinglePlayer</string>
    <string name="communication_test_text">communication test</string>
    <string name="title_activity_communication_test">CommunicationTest</string>
    <string name="registration_text">User Registration</string>
    <string name="registed_list_text">Register List</string>
    <string name="send_message_text">Sending Message</string>
    <string name="title_activity_user_registration">UserRegistration</string>
    <string name="title_activity_registed_list">RegistedList</string>
    <string name="title_activity_home_menu">HomeMenuActivity</string>
    <string name="title_activity_pick_player">PickPlayer</string>
    <string name="title_activity_two_player_game">TwoPlayerGameActivity</string>
    <string name="title_activity_score_rank">ScoreRankActivity</string>
</resources>
