<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".asn1.aboutMeActivityFragment">


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_label"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="bold|italic" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reportError_label"
        android:id="@+id/error_button"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="bold|italic" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tictac_label"
        android:id="@+id/tictac_button"
        android:layout_below="@+id/error_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="bold|italic" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/dictionary_button"
        android:text="@string/dictionary_label"
        android:layout_below="@id/tictac_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="bold|italic"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newgame_button"
        android:text="@string/new_game_label"
        android:layout_below="@+id/dictionary_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="bold|italic" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quit_label"
        android:id="@+id/quit_button"
        android:layout_below="@+id/newgame_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        android:textStyle="bold|italic" />
</RelativeLayout>
